# adm_coordinate_conversion

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: AdmCoordConvConfig.cmake.in
include/adm_coord_conv/: adm_coord_conv.hpp
src/: adm_coord_conv.cpp
test/: CMakeLists.txt  tests.cpp
